# Grafics2

./: CMakeLists.txt
Project/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  CommandPool.h  Descriptor.cpp  Descriptor.h  MachineShader.cpp  MachineShader.h  Mesh.h  Structs.h  Texture.cpp  Texture.h  UniformBufferClass.cpp  main.cpp
Project/labwork/: Week01.cpp  Week02.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
Project/resources/: scene.json
Project/shaders/: shader.frag  shader.vert
Project/vulkanbase/: VulkanBase.h
Week1/: CMakeLists.txt
Week1/Project/: Descriptor.cpp  Descriptor.h  Structs.h  UniformBufferClass.h
Week1/Project/labwork/: Week01.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
